--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ charset-normalizer==3.4.1
 cryptography==44.0.2
 Django==4.2.23
 greenlet==3.2.3
+gunicorn==20.1.0
 pdfminer.six==20250327
 pdfplumber==0.11.6
 pillow==11.2.1
@@ -11,6 +12,7 @@ psycopg2==2.9.10
 pycparser==2.22
 PyPDF2==3.0.1
 pypdfium2==4.30.1
+setuptools==80.9.0
 SQLAlchemy==2.0.41
 sqlparse==0.5.3
 typing_extensions==4.14.1
